# luxtorpeda

./: .clippy.toml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  com.valvesoftware.Steam.CompatibilityTool.Luxtorpeda.metainfo.xml  compatibilitytool.template  compatibilitytool.vdf  config.json  default_env.tres  export_presets.cfg  index.html  luxtorpeda.gdextension  luxtorpeda.gdextension.uid  luxtorpeda.sh  luxtorpeda_gdnativelibrary.tres  packages.json  packages.json.staging  post_build.rs  project.godot  rust_panic_hook.gd  shell.nix  toolmanifest.vdf
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  game-bug-report.md  package-request.md  pending-package.md
.github/workflows/: build.yml  delete_old_artifacts.yml  publish_readme.yml  test.yml
Resources/: accept-icon.png.import  icon.png.import  theme.tres
Scenes/Choices/: Choices.gd  Choices.gd.uid  Choices.tscn
Scenes/MainScene/: Controls.gd  Controls.gd.uid  MainScene.gd  MainScene.gdns  MainScene.tscn  SignalEmitter.gdns
Scenes/Progress/: Progress.gd  Progress.gd.uid  Progress.tscn
Scenes/Prompt/: Prompt.gd  Prompt.gd.uid  Prompt.tscn
Scenes/TitleBar/: TitleBar.gd  TitleBar.gd.uid  TitleBar.tscn
addons/controller_icons/: ControllerIcons.gd  ControllerIcons.gd.uid  LICENSE  Mapper.gd  Mapper.gd.uid  Settings.gd  Settings.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid  settings.tres
addons/controller_icons/assets/: disconnected.png.import
addons/controller_icons/assets/key/: 0.png.import  1.png.import  2.png.import  3.png.import  4.png.import  5.png.import  6.png.import  7.png.import  8.png.import  9.png.import  a.png.import  alt.png.import  arrow_down.png.import  arrow_left.png.import  arrow_right.png.import  arrow_up.png.import  asterisk.png.import  b.png.import  backspace.png.import  backspace_alt.png.import  bracket_left.png.import  bracket_right.png.import  c.png.import  caps_lock.png.import  command.png.import  ctrl.png.import  d.png.import  del.png.import  e.png.import  end.png.import  enter.png.import  enter_alt.png.import  enter_tall.png.import  esc.png.import  f.png.import  f1.png.import  f10.png.import  f11.png.import  f12.png.import  f2.png.import  (+48 more)
addons/controller_icons/assets/luna/: a.png.import  b.png.import  circle.png.import  diagram.png.import  diagram_simple.png.import  dpad.png.import  dpad_down.png.import  dpad_left.png.import  dpad_right.png.import  dpad_up.png.import  l_stick.png.import  l_stick_click.png.import  lb.png.import  lt.png.import  menu.png.import  microphone.png.import  r_stick.png.import  r_stick_click.png.import  rb.png.import  rt.png.import  x.png.import  y.png.import
addons/controller_icons/assets/mouse/: left.png.import  middle.png.import  right.png.import  simple.png.import
addons/controller_icons/assets/ouya/: a.png.import  dpad.png.import  dpad_down.png.import  dpad_left.png.import  dpad_right.png.import  dpad_up.png.import  l1.png.import  l2.png.import  l_stick.png.import  menu.png.import  o.png.import  r1.png.import  r2.png.import  r_stick.png.import  touch.png.import  u.png.import  y.png.import
addons/controller_icons/example/: IconRemapper.gd  IconRemapper.gd.uid  IconRemapper.tscn  IconTest.tscn
addons/controller_icons/objects/: Button.gd  Button.gd.uid  Sprite.gd  Sprite.gd.uid  Sprite3D.gd  Sprite3D.gd.uid  TextureRect.gd  TextureRect.gd.uid
luxtorpeda-original/: toolmanifest.vdf
luxtorpeda-runtime/: toolmanifest.vdf
res/prompts/: Readme.txt
scripts/: check-sodeps.sh  create-package.md  init-packages.sh  mirrors-sync.sh  new-package-doc.md  packages-init.sh  packages-status.sh  packages.txt  sync-mirrors.sh
src/: .main.rs.kate-swp  client.rs  command.rs  config.rs  dialog.rs  fakescripteval.rs  godot_logger.rs  ipc.rs  lib.rs  main.rs  mgmt.rs  package.rs  package_metadata.rs  pid_file.rs  proton_handler.rs  run_context.rs  ui.rs  user_env.rs
src/package/: user_env.rs
src/parsers/: LICENSE  appinfo_vdf_parser.rs  mod.rs  reader.rs  vdf_reader.rs  vdf_structs.rs
(+245 files in other folders)
