[package]
name = "luxtorpeda"
version = "65.1.1"
authors = ["Patryk Obara <dreamer.tan@gmail.com>", "d10sfan <d10sfan+luxtorpeda@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_regex = "1.1"
json = "0.12.4"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = ["rustls-tls", "blocking", "gzip", "stream"], default-features = false }
users = "0.11"
xdg = "2.5.2"
tar = "0.4.40"
xz2 = "0.1.7"
sha2 = "0.10"
hex = "0.4.3"
bzip2 = "0.4.4"
zip = "0.6.6"
flate2 = "1.0.26"
futures-util = "0.3.28"
tokio = { version = "1.31.0", default-features = false, features = ["full"] }
which = "4.3.0"
steamlocate = "2.0.0-alpha.0"
signal-hook = "0.3.17"
log = "0.4.20"
simplelog = "0.12.1"
gdnative = "0.11"
godot-logger = { git = "https://github.com/luxtorpeda-dev/godot-logger.git", "rev" = "f0db7f7" }
sevenz-rust = "0.4"

[workspace.metadata.release]
allow-branch = ["master"]
publish = false
