[package]
name = "luxtorpeda"
version = "69.0.0"
authors = ["Patryk Obara <dreamer.tan@gmail.com>", "d10sfan <d10sfan+luxtorpeda@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_regex = "1.1"
json = "0.12.4"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["rustls-tls", "blocking", "gzip", "stream"], default-features = false }
xdg = "2.5.2"
tar = "0.4.40"
xz2 = "0.1.7"
sha2 = "0.10"
hex = "0.4.3"
bzip2 = "0.4.4"
zip = "1.1.3"
flate2 = "1.0.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", default-features = false, features = ["full"] }
which = "6.0.1"
steamlocate = { version = "2.0.0-alpha.0", features = ["steamid_ng"] }
signal-hook = "0.3.17"
log = "0.4.21"
simplelog = "0.12.2"
sevenz-rust = "0.6"
ar = "0.9.0"
iso9660 = { git = "https://github.com/luxtorpeda-dev/iso9660-rs.git", "rev" = "43a76ed" }
rbchunk = "2.1.0"
walkdir = "2"
steamid-ng = "1.0.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
chrono = "0.4.38"
url = "2.5.0"

[patch."https://github.com/godot-rust/godot4-prebuilt".godot4-prebuilt]
git = "https://github.com//godot-rust/godot4-prebuilt"
branch = "4.2.2"

[package.metadata.cargo-post.dependencies]
fs_extra = "1.3.0"
tar = "0.4.40"
xz2 = "0.1.7"

[workspace.metadata.release]
allow-branch = ["master"]
publish = false

[profile.release]
strip = "symbols"
