[package]
name = "luxtorpeda"
version = "74.3.0"
authors = ["Patryk Obara <dreamer.tan@gmail.com>", "d10sfan <d10sfan+luxtorpeda@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_regex = "1.1"
json = "0.12.4"
regex = "1.12.1"
reqwest = { version = "0.12.23", features = ["rustls-tls", "blocking", "gzip", "stream"], default-features = false }
xdg = "3.0.0"
tar = "0.4.44"
xz2 = "0.1.7"
sha2 = "0.10"
hex = "0.4.3"
bzip2 = "0.6.0"
zip = "1.1.4"
flate2 = "1.1.4"
futures-util = "0.3.31"
tokio = { version = "1.47.1", default-features = false, features = ["full"] }
which = "8.0.0"
steamlocate = { version = "2.0.0-alpha.0", features = ["steamid_ng"] }
signal-hook = "0.3.18"
log = "0.4.28"
simplelog = "0.12.2"
sevenz-rust = "0.6"
ar = "0.9.0"
iso9660 = { git = "https://github.com/luxtorpeda-dev/iso9660-rs.git", "rev" = "43a76ed" }
rbchunk = "2.1.0"
walkdir = "2"
steamid-ng = "2.0.0"
godot = {version = "0.2.4" }
chrono = "0.4.42"
url = "2.5.7"
rayon = "1.11.0"
keyvalues-serde = "0.2.2"
new-vdf-parser = "0.2.0"

[package.metadata.cargo-post.dependencies]
fs_extra = "1.3.0"
tar = "0.4.44"
xz2 = "0.1.7"

[workspace.metadata.release]
allow-branch = ["master"]
publish = false

[profile.release]
strip = "symbols"
